--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@capacitor/angular": "^1.0.2",
     "@capacitor/core": "latest",
     "@capacitor/ios": "^2.1.2",
+    "bootstrap": "^4.5.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
