--- a/package.json
+++ b/package.json
@@ -41,9 +41,12 @@
     "@capacitor/angular": "^1.0.2",
     "@capacitor/core": "latest",
     "@capacitor/ios": "^2.1.2",
+    "@ng-select/ng-select": "^4.0.0",
     "bootstrap": "^4.5.0",
+    "ngx-monaco-editor": "^9.0.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
+    "vm-browserify": "^1.1.2",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
