--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@ng-select/ng-select": "^4.0.0",
     "bootstrap": "^4.5.0",
     "ngx-monaco-editor": "^9.0.0",
+    "prettier": "^2.0.5",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "vm-browserify": "^1.1.2",
