--- a/package.json
+++ b/package.json
@@ -46,11 +46,11 @@
     "@capacitor/ios": "^2.1.2",
     "@ng-select/ng-select": "^4.0.0",
     "bootstrap": "^4.5.0",
-    "ngx-monaco-editor": "^9.0.0",
+    "codejar": "^3.0.0",
+    "highlight.js": "^10.0.3",
     "prettier": "^2.0.5",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
-    "vm-browserify": "^1.1.2",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
