--- a/package.json
+++ b/package.json
@@ -44,6 +44,9 @@
     "@capacitor/angular": "^1.0.2",
     "@capacitor/core": "latest",
     "@capacitor/ios": "^2.1.2",
+    "@fortawesome/angular-fontawesome": "^0.6.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@ng-select/ng-select": "^4.0.0",
     "bootstrap": "^4.5.0",
     "codejar": "^3.0.0",
