--- a/package.json
+++ b/package.json
@@ -52,7 +52,9 @@
     "@ng-select/ng-select": "^4.0.0",
     "bootstrap": "^4.5.0",
     "codejar": "^3.0.0",
+    "hammerjs": "^2.0.8",
     "highlight.js": "^10.0.3",
+    "ngx-bootstrap": "^5.6.1",
     "prettier": "^2.0.5",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
