--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "AlgorithmVisualizer": {
+    "algorithm-visualizer": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -23,7 +23,11 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
             "aot": true,
-            "assets": ["src/favicon.ico", "src/assets", "src/manifest.webmanifest"],
+            "assets": [
+              "src/favicon.ico",
+              "src/assets",
+              "src/manifest.webmanifest"
+            ],
             "styles": ["src/styles.scss"],
             "scripts": [],
             "webWorkerTsConfig": "tsconfig.worker.json"
@@ -64,18 +68,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "AlgorithmVisualizer:build"
+            "browserTarget": "algorithm-visualizer:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "AlgorithmVisualizer:build:production"
+              "browserTarget": "algorithm-visualizer:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "AlgorithmVisualizer:build"
+            "browserTarget": "algorithm-visualizer:build"
           }
         },
         "test": {
@@ -85,7 +89,11 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.spec.json",
             "karmaConfig": "karma.conf.js",
-            "assets": ["src/favicon.ico", "src/assets", "src/manifest.webmanifest"],
+            "assets": [
+              "src/favicon.ico",
+              "src/assets",
+              "src/manifest.webmanifest"
+            ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.scss"
@@ -109,18 +117,18 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "AlgorithmVisualizer:serve"
+            "devServerTarget": "algorithm-visualizer:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "AlgorithmVisualizer:serve:production"
+              "devServerTarget": "algorithm-visualizer:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "AlgorithmVisualizer",
+  "defaultProject": "algorithm-visualizer",
   "cli": {
     "analytics": false
   }
